crates/dag-macros/tests/ui/workflow_delivery_duplicate.stderr
error: [DAG207] duplicate delivery! for edge `trigger` -> `sink`
  --> tests/ui/workflow_delivery_duplicate.rs:42:5
   |
42 |     delivery!(trigger -> sink, mode = at_most_once);
   |     ^^^^^^^^
